# serializer version: 1
# name: TestAntCostEqual.test_snapshot
  0.8217195839822765
# ---
# name: TestAntCostEqual.test_snapshot.1
  0.9916088870480808
# ---
# name: TestAntCostEqual.test_snapshot.10
  0.0287730240161329
# ---
# name: TestAntCostEqual.test_snapshot.100
  0.9942783641856467
# ---
# name: TestAntCostEqual.test_snapshot.101
  -0.0859368466278043
# ---
# name: TestAntCostEqual.test_snapshot.102
  0.0607630578607972
# ---
# name: TestAntCostEqual.test_snapshot.103
  0.0182549638013644
# ---
# name: TestAntCostEqual.test_snapshot.104
  0.5721321075810565
# ---
# name: TestAntCostEqual.test_snapshot.105
  1.305099251586962
# ---
# name: TestAntCostEqual.test_snapshot.106
  -0.4646644569286908
# ---
# name: TestAntCostEqual.test_snapshot.107
  -0.601339741376164
# ---
# name: TestAntCostEqual.test_snapshot.108
  0.5929510739274422
# ---
# name: TestAntCostEqual.test_snapshot.109
  -1.24556150010968
# ---
# name: TestAntCostEqual.test_snapshot.11
  0.064552322654166
# ---
# name: TestAntCostEqual.test_snapshot.110
  0.1698415308856424
# ---
# name: TestAntCostEqual.test_snapshot.111
  1.0606087742013692
# ---
# name: TestAntCostEqual.test_snapshot.112
  -0.0778399534204618
# ---
# name: TestAntCostEqual.test_snapshot.113
  -0.0074122827265534
# ---
# name: TestAntCostEqual.test_snapshot.114
  -1.4813785484872442
# ---
# name: TestAntCostEqual.test_snapshot.115
  -0.191461178270048
# ---
# name: TestAntCostEqual.test_snapshot.116
  0.4418971258235626
# ---
# name: TestAntCostEqual.test_snapshot.117
  -0.1658221424291745
# ---
# name: TestAntCostEqual.test_snapshot.118
  0.0920255602309421
# ---
# name: TestAntCostEqual.test_snapshot.119
  -2.457212293528775
# ---
# name: TestAntCostEqual.test_snapshot.12
  -0.0113171602345338
# ---
# name: TestAntCostEqual.test_snapshot.120
  0.3740353790349211
# ---
# name: TestAntCostEqual.test_snapshot.121
  -2.6253982609919047
# ---
# name: TestAntCostEqual.test_snapshot.122
  1.495059282386685
# ---
# name: TestAntCostEqual.test_snapshot.123
  -4.127453640396519
# ---
# name: TestAntCostEqual.test_snapshot.124
  -0.6998141706281641
# ---
# name: TestAntCostEqual.test_snapshot.125
  1.1459908578542728
# ---
# name: TestAntCostEqual.test_snapshot.126
  1.0
# ---
# name: TestAntCostEqual.test_snapshot.127
  -1.1331687498528507
# ---
# name: TestAntCostEqual.test_snapshot.128
  -0.1331687498528507
# ---
# name: TestAntCostEqual.test_snapshot.129
  1.2840714156430724
# ---
# name: TestAntCostEqual.test_snapshot.13
  -0.0859292462883238
# ---
# name: TestAntCostEqual.test_snapshot.130
  False
# ---
# name: TestAntCostEqual.test_snapshot.131
  False
# ---
# name: TestAntCostEqual.test_snapshot.132
  dict({
    'cost_contact': 0.0,
    'cost_ctrl': 0.0003127141475677,
    'cost_velocity': 1.2840714156430724,
    'distance_from_origin': 0.0397462617329449,
    'forward_reward': -0.1331687498528507,
    'penalty_health': 0.0,
    'reward_ctrl': -0.0003127141475677,
    'reward_forward': -0.1331687498528507,
    'reward_survive': 1.0,
    'x_position': 0.0380389826985347,
    'x_velocity': -0.1331687498528507,
    'y_position': -0.0115239366973417,
    'y_velocity': 0.0179008221775986,
  })
# ---
# name: TestAntCostEqual.test_snapshot.133
  0.7516132074521321
# ---
# name: TestAntCostEqual.test_snapshot.134
  0.995515223073717
# ---
# name: TestAntCostEqual.test_snapshot.135
  -0.0725082991554824
# ---
# name: TestAntCostEqual.test_snapshot.136
  0.0577641749761766
# ---
# name: TestAntCostEqual.test_snapshot.137
  0.0188490655309077
# ---
# name: TestAntCostEqual.test_snapshot.138
  0.5287432731470202
# ---
# name: TestAntCostEqual.test_snapshot.139
  1.0434176471790408
# ---
# name: TestAntCostEqual.test_snapshot.14
  0.0368750784082499
# ---
# name: TestAntCostEqual.test_snapshot.140
  -0.548686034880311
# ---
# name: TestAntCostEqual.test_snapshot.141
  -0.6629857014510564
# ---
# name: TestAntCostEqual.test_snapshot.142
  0.5506670809476554
# ---
# name: TestAntCostEqual.test_snapshot.143
  -1.187663480279202
# ---
# name: TestAntCostEqual.test_snapshot.144
  0.2386847809496931
# ---
# name: TestAntCostEqual.test_snapshot.145
  1.0054166144382228
# ---
# name: TestAntCostEqual.test_snapshot.146
  -0.6785716055077514
# ---
# name: TestAntCostEqual.test_snapshot.147
  -1.3679979703014575
# ---
# name: TestAntCostEqual.test_snapshot.148
  -0.4262577253470868
# ---
# name: TestAntCostEqual.test_snapshot.149
  0.5922646014408929
# ---
# name: TestAntCostEqual.test_snapshot.15
  -0.0958882600828999
# ---
# name: TestAntCostEqual.test_snapshot.150
  -0.060830609728925
# ---
# name: TestAntCostEqual.test_snapshot.151
  -0.4617778365279562
# ---
# name: TestAntCostEqual.test_snapshot.152
  -1.1591599788878681
# ---
# name: TestAntCostEqual.test_snapshot.153
  -8.360973148991114
# ---
# name: TestAntCostEqual.test_snapshot.154
  -0.7825743516323485
# ---
# name: TestAntCostEqual.test_snapshot.155
  0.146750513160343
# ---
# name: TestAntCostEqual.test_snapshot.156
  -0.8775617312033328
# ---
# name: TestAntCostEqual.test_snapshot.157
  4.733934123185799
# ---
# name: TestAntCostEqual.test_snapshot.158
  3.4059118403095274
# ---
# name: TestAntCostEqual.test_snapshot.159
  -3.3303330857523914
# ---
# name: TestAntCostEqual.test_snapshot.16
  0.0878450301307272
# ---
# name: TestAntCostEqual.test_snapshot.160
  1.0
# ---
# name: TestAntCostEqual.test_snapshot.161
  -1.5493652299515221
# ---
# name: TestAntCostEqual.test_snapshot.162
  -0.5493652299515223
# ---
# name: TestAntCostEqual.test_snapshot.163
  2.400532615782733
# ---
# name: TestAntCostEqual.test_snapshot.164
  False
# ---
# name: TestAntCostEqual.test_snapshot.165
  False
# ---
# name: TestAntCostEqual.test_snapshot.166
  dict({
    'cost_contact': 0.0,
    'cost_ctrl': 0.0003245847940445,
    'cost_velocity': 2.400532615782733,
    'distance_from_origin': 0.0674606834370258,
    'forward_reward': -0.5493652299515223,
    'penalty_health': 0.0,
    'reward_ctrl': -0.0003245847940445,
    'reward_forward': -0.5493652299515223,
    'reward_survive': 1.0,
    'x_position': 0.0105707212009586,
    'x_velocity': -0.5493652299515223,
    'y_position': -0.0666273492124834,
    'y_velocity': -1.1020682503028352,
  })
# ---
# name: TestAntCostEqual.test_snapshot.167
  0.711804146583538
# ---
# name: TestAntCostEqual.test_snapshot.168
  0.9963505762429838
# ---
# name: TestAntCostEqual.test_snapshot.169
  -0.0601545204158196
# ---
# name: TestAntCostEqual.test_snapshot.17
  -0.0049925910986253
# ---
# name: TestAntCostEqual.test_snapshot.170
  0.058621346438584
# ---
# name: TestAntCostEqual.test_snapshot.171
  0.0151822473812187
# ---
# name: TestAntCostEqual.test_snapshot.172
  0.461192022926435
# ---
# name: TestAntCostEqual.test_snapshot.173
  0.5218558172778258
# ---
# name: TestAntCostEqual.test_snapshot.174
  -0.5355688013037536
# ---
# name: TestAntCostEqual.test_snapshot.175
  -0.664580105855161
# ---
# name: TestAntCostEqual.test_snapshot.176
  0.4081626405583841
# ---
# name: TestAntCostEqual.test_snapshot.177
  -0.8945362267959178
# ---
# name: TestAntCostEqual.test_snapshot.178
  0.3408814031878626
# ---
# name: TestAntCostEqual.test_snapshot.179
  0.7955419578424723
# ---
# name: TestAntCostEqual.test_snapshot.18
  -0.0184862363545261
# ---
# name: TestAntCostEqual.test_snapshot.180
  -0.4446585428755358
# ---
# name: TestAntCostEqual.test_snapshot.181
  -1.2840644698375567
# ---
# name: TestAntCostEqual.test_snapshot.182
  -1.1466432654309724
# ---
# name: TestAntCostEqual.test_snapshot.183
  0.6082945225158629
# ---
# name: TestAntCostEqual.test_snapshot.184
  0.0047557074669356
# ---
# name: TestAntCostEqual.test_snapshot.185
  0.4510491407033329
# ---
# name: TestAntCostEqual.test_snapshot.186
  -1.5467694666176905
# ---
# name: TestAntCostEqual.test_snapshot.187
  -10.256484879948953
# ---
# name: TestAntCostEqual.test_snapshot.188
  0.3301126332473398
# ---
# name: TestAntCostEqual.test_snapshot.189
  -0.209683618871645
# ---
# name: TestAntCostEqual.test_snapshot.19
  -0.0680929544403941
# ---
# name: TestAntCostEqual.test_snapshot.190
  -4.78987517526913
# ---
# name: TestAntCostEqual.test_snapshot.191
  6.976444902220714
# ---
# name: TestAntCostEqual.test_snapshot.192
  0.6984667957870248
# ---
# name: TestAntCostEqual.test_snapshot.193
  -5.049843744069792
# ---
# name: TestAntCostEqual.test_snapshot.194
  1.0
# ---
# name: TestAntCostEqual.test_snapshot.195
  -1.5492853440442207
# ---
# name: TestAntCostEqual.test_snapshot.196
  -0.5492853440442207
# ---
# name: TestAntCostEqual.test_snapshot.197
  2.4002850772702193
# ---
# name: TestAntCostEqual.test_snapshot.198
  False
# ---
# name: TestAntCostEqual.test_snapshot.199
  False
# ---
# name: TestAntCostEqual.test_snapshot.2
  -0.0774271412280302
# ---
# name: TestAntCostEqual.test_snapshot.20
  0.122254133867403
# ---
# name: TestAntCostEqual.test_snapshot.200
  dict({
    'cost_contact': 0.0,
    'cost_ctrl': 0.0001541744112968,
    'cost_velocity': 2.4002850772702193,
    'distance_from_origin': 0.134075711510765,
    'forward_reward': -0.5492853440442207,
    'penalty_health': 0.0,
    'reward_ctrl': -0.0001541744112968,
    'reward_forward': -0.5492853440442207,
    'reward_survive': 1.0,
    'x_position': -0.0168935460012524,
    'x_velocity': -0.5492853440442207,
    'y_position': -0.1330071596592508,
    'y_velocity': -1.327596208935348,
  })
# ---
# name: TestAntCostEqual.test_snapshot.21
  -0.0154529482068802
# ---
# name: TestAntCostEqual.test_snapshot.22
  -0.0428327822163107
# ---
# name: TestAntCostEqual.test_snapshot.23
  -0.035213355048823
# ---
# name: TestAntCostEqual.test_snapshot.24
  0.0532309185553349
# ---
# name: TestAntCostEqual.test_snapshot.25
  0.0365444064364078
# ---
# name: TestAntCostEqual.test_snapshot.26
  0.0412732611595988
# ---
# name: TestAntCostEqual.test_snapshot.27
  1.0
# ---
# name: TestAntCostEqual.test_snapshot.28
  -1.0
# ---
# name: TestAntCostEqual.test_snapshot.29
  0.0
# ---
# name: TestAntCostEqual.test_snapshot.3
  0.0907442667374609
# ---
# name: TestAntCostEqual.test_snapshot.30
  dict({
  })
# ---
# name: TestAntCostEqual.test_snapshot.31
  0.8407919712982543
# ---
# name: TestAntCostEqual.test_snapshot.32
  0.9932166193724318
# ---
# name: TestAntCostEqual.test_snapshot.33
  -0.0748386089532564
# ---
# name: TestAntCostEqual.test_snapshot.34
  0.0811227423697824
# ---
# name: TestAntCostEqual.test_snapshot.35
  0.0365927627099295
# ---
# name: TestAntCostEqual.test_snapshot.36
  0.1840199756409649
# ---
# name: TestAntCostEqual.test_snapshot.37
  0.4405922118387234
# ---
# name: TestAntCostEqual.test_snapshot.38
  -0.1562553652313192
# ---
# name: TestAntCostEqual.test_snapshot.39
  -0.3810127897954648
# ---
# name: TestAntCostEqual.test_snapshot.4
  0.0498229965257216
# ---
# name: TestAntCostEqual.test_snapshot.40
  0.1785463166038994
# ---
# name: TestAntCostEqual.test_snapshot.41
  -0.3834662217311874
# ---
# name: TestAntCostEqual.test_snapshot.42
  0.1663164406876887
# ---
# name: TestAntCostEqual.test_snapshot.43
  0.4140176816545653
# ---
# name: TestAntCostEqual.test_snapshot.44
  -0.1962819434245767
# ---
# name: TestAntCostEqual.test_snapshot.45
  -0.1776013961969666
# ---
# name: TestAntCostEqual.test_snapshot.46
  0.1297716660354011
# ---
# name: TestAntCostEqual.test_snapshot.47
  0.1572714241521136
# ---
# name: TestAntCostEqual.test_snapshot.48
  -0.8041248650060641
# ---
# name: TestAntCostEqual.test_snapshot.49
  -1.0253112328541807
# ---
# name: TestAntCostEqual.test_snapshot.5
  0.0572128610553908
# ---
# name: TestAntCostEqual.test_snapshot.50
  5.103576027721423
# ---
# name: TestAntCostEqual.test_snapshot.51
  12.541117699928481
# ---
# name: TestAntCostEqual.test_snapshot.52
  -5.79477567722775
# ---
# name: TestAntCostEqual.test_snapshot.53
  -5.304115207359589
# ---
# name: TestAntCostEqual.test_snapshot.54
  3.731844297088785
# ---
# name: TestAntCostEqual.test_snapshot.55
  -7.4905278175382435
# ---
# name: TestAntCostEqual.test_snapshot.56
  3.9994275515215874
# ---
# name: TestAntCostEqual.test_snapshot.57
  9.033972437290057
# ---
# name: TestAntCostEqual.test_snapshot.58
  1.0
# ---
# name: TestAntCostEqual.test_snapshot.59
  -1.0857372691250815
# ---
# name: TestAntCostEqual.test_snapshot.6
  -0.0743772734648908
# ---
# name: TestAntCostEqual.test_snapshot.60
  -0.0857372691250814
# ---
# name: TestAntCostEqual.test_snapshot.61
  1.1788254175671897
# ---
# name: TestAntCostEqual.test_snapshot.62
  False
# ---
# name: TestAntCostEqual.test_snapshot.63
  False
# ---
# name: TestAntCostEqual.test_snapshot.64
  dict({
    'cost_contact': 0.0,
    'cost_ctrl': 0.0003149079084396,
    'cost_velocity': 1.1788254175671897,
    'distance_from_origin': 0.0524015029022745,
    'forward_reward': -0.0857372691250814,
    'penalty_health': 0.0,
    'reward_ctrl': -0.0003149079084396,
    'reward_forward': -0.0857372691250814,
    'reward_survive': 1.0,
    'x_position': 0.0505043462549386,
    'x_velocity': -0.0857372691250814,
    'y_position': -0.0139724198254403,
    'y_velocity': -0.0349621555170149,
  })
# ---
# name: TestAntCostEqual.test_snapshot.65
  0.8276472520968416
# ---
# name: TestAntCostEqual.test_snapshot.66
  0.9952936880306066
# ---
# name: TestAntCostEqual.test_snapshot.67
  -0.0725265342150993
# ---
# name: TestAntCostEqual.test_snapshot.68
  0.0570854913858921
# ---
# name: TestAntCostEqual.test_snapshot.69
  0.0295232632751063
# ---
# name: TestAntCostEqual.test_snapshot.7
  -0.0099228124208866
# ---
# name: TestAntCostEqual.test_snapshot.70
  0.3864590962855272
# ---
# name: TestAntCostEqual.test_snapshot.71
  1.208452412969746
# ---
# name: TestAntCostEqual.test_snapshot.72
  -0.3879966443933651
# ---
# name: TestAntCostEqual.test_snapshot.73
  -0.5219557890182384
# ---
# name: TestAntCostEqual.test_snapshot.74
  0.339316363732256
# ---
# name: TestAntCostEqual.test_snapshot.75
  -0.8484633293460893
# ---
# name: TestAntCostEqual.test_snapshot.76
  0.2256946462582859
# ---
# name: TestAntCostEqual.test_snapshot.77
  0.8366010116440885
# ---
# name: TestAntCostEqual.test_snapshot.78
  -0.0470909127009032
# ---
# name: TestAntCostEqual.test_snapshot.79
  0.2059221908710316
# ---
# name: TestAntCostEqual.test_snapshot.8
  -0.0258403951534838
# ---
# name: TestAntCostEqual.test_snapshot.80
  -0.7042417608831626
# ---
# name: TestAntCostEqual.test_snapshot.81
  -0.0649533640184198
# ---
# name: TestAntCostEqual.test_snapshot.82
  -0.8870544293366875
# ---
# name: TestAntCostEqual.test_snapshot.83
  0.3718878625380356
# ---
# name: TestAntCostEqual.test_snapshot.84
  3.0121673925802104
# ---
# name: TestAntCostEqual.test_snapshot.85
  18.12550445638559
# ---
# name: TestAntCostEqual.test_snapshot.86
  -3.4942168466123245
# ---
# name: TestAntCostEqual.test_snapshot.87
  -0.539023411367595
# ---
# name: TestAntCostEqual.test_snapshot.88
  2.709549200894454
# ---
# name: TestAntCostEqual.test_snapshot.89
  -11.081676080943627
# ---
# name: TestAntCostEqual.test_snapshot.9
  0.0853529977697204
# ---
# name: TestAntCostEqual.test_snapshot.90
  -1.583948806863844
# ---
# name: TestAntCostEqual.test_snapshot.91
  7.876496394579283
# ---
# name: TestAntCostEqual.test_snapshot.92
  1.0
# ---
# name: TestAntCostEqual.test_snapshot.93
  -1.1161385212752264
# ---
# name: TestAntCostEqual.test_snapshot.94
  -0.1161385212752264
# ---
# name: TestAntCostEqual.test_snapshot.95
  1.245765198674449
# ---
# name: TestAntCostEqual.test_snapshot.96
  False
# ---
# name: TestAntCostEqual.test_snapshot.97
  False
# ---
# name: TestAntCostEqual.test_snapshot.98
  dict({
    'cost_contact': 0.0,
    'cost_ctrl': 0.0002168221950531,
    'cost_velocity': 1.245765198674449,
    'distance_from_origin': 0.0463906281645128,
    'forward_reward': -0.1161385212752264,
    'penalty_health': 0.0,
    'reward_ctrl': -0.0002168221950531,
    'reward_forward': -0.1161385212752264,
    'reward_survive': 1.0,
    'x_position': 0.0446974201911773,
    'x_velocity': -0.1161385212752264,
    'y_position': -0.0124189778062216,
    'y_velocity': 0.0310688403843736,
  })
# ---
# name: TestAntCostEqual.test_snapshot.99
  0.7714324261248123
# ---
